--- a/dotnet-app-template.yml
+++ b/dotnet-app-template.yml
@@ -82,6 +82,11 @@ objects:
                 }
     
                 stage('Scan Codebase') {
+                  when {
+                    expression {
+                      return false;
+                    }
+                  }
                   steps {
                     dir("${solution_folder_path}") {
                       withSonarQubeEnv('SonarQube-Server') {
@@ -105,6 +110,44 @@ objects:
                             sh "dotnet publish -c Release"
                             openshift.startBuild("${app_name}", "--from-dir=bin/Release/netcoreapp3.1/publish", "--follow")
                           }
+                        }
+                      }
+                    }
+                  }
+                }
+
+                stage('Canary Load 25%') {
+                  steps {
+                    script {
+                      openshift.withCluster() {
+                        openshift.withProject("${project_build}") {
+                          sh "oc set route-backends ${app_name} ${app_name}=75 ${app_name}-canary=25"
+                        }
+                      }
+                    }
+                  }
+                }
+
+                stage("Is Canary OK?") {
+                  steps {
+                    script {
+                      openshift.withCluster() {
+                        openshift.withProject("${project_build}") {
+
+                          def canaryOK
+                          try {
+                            canaryOK = input(message: 'Is canary successful?', ok: 'Proceed', 
+                                        parameters: [booleanParam(defaultValue: true, description: '', name: 'Yes?')])
+                          } catch(err) { 
+                            canaryOK = false
+                            currentBuild.result = 'FAILURE'
+                          }
+
+                          if (canaryOK) {
+                            sh "oc rollout latest ${app_name}"
+                          } 
+
+                          sh "oc set route-backends ${app_name} ${app_name}=100"
                         }
                       }
                     }
@@ -153,7 +196,7 @@ objects:
     - generic:
         secret: RVNVn79gonNB_nHYZ9l8
       type: Generic
-# Deployment Config
+# Deployment Config - prod (triggered with only config changes)
 - apiVersion: apps.openshift.io/v1
   kind: DeploymentConfig
   metadata:
@@ -199,13 +242,13 @@ objects:
     - type: ConfigChange
     - type: ImageChange
       imageChangeParams:
-        automatic: true
+        automatic: false
         containerNames:
         - ${APP_NAME}
         from:
           kind: ImageStreamTag
-          name: ${APP_NAME}:latest
-# Service
+          name: ${APP_NAME}:latest    
+# Service - prod
 - apiVersion: v1
   kind: Service
   metadata:
@@ -223,7 +266,7 @@ objects:
       deploymentconfig: ${APP_NAME}
     sessionAffinity: None
     type: ClusterIP
-#Route2
+#Route - prod
 - apiVersion: route.openshift.io/v1
   kind: Route
   metadata:
@@ -241,5 +284,95 @@ objects:
     to:
       kind: Service
       name: ${APP_NAME}
+      weight: 100
+    wildcardPolicy: None
+# Deployment Config - canary
+- apiVersion: apps.openshift.io/v1
+  kind: DeploymentConfig
+  metadata:
+    generation: 2
+    labels:
+      app: ${APP_NAME}
+    name: ${APP_NAME}-canary
+  spec:
+    replicas: 1
+    selector:
+      app: ${APP_NAME}
+      deploymentconfig: ${APP_NAME}-canary
+    strategy:
+      rollingParams:
+        intervalSeconds: 1
+        maxSurge: 25%
+        maxUnavailable: 25%
+        timeoutSeconds: 600
+        updatePeriodSeconds: 1
+      type: Rolling
+    template:
+      metadata:
+        labels:
+          app: ${APP_NAME}
+          deploymentconfig: ${APP_NAME}-canary
+      spec:
+        containers:
+        - image: ${APP_NAME}:latest
+          imagePullPolicy: Always
+          name: ${APP_NAME}
+          ports:
+          - containerPort: 8080
+            protocol: TCP
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
+        dnsPolicy: ClusterFirst
+        restartPolicy: Always
+        schedulerName: default-scheduler
+        securityContext: {}
+        terminationGracePeriodSeconds: 30
+    test: false
+    triggers:
+    - type: ConfigChange
+    - type: ImageChange
+      imageChangeParams:
+        automatic: true
+        containerNames:
+        - ${APP_NAME}
+        from:
+          kind: ImageStreamTag
+          name: ${APP_NAME}:latest
+# Service - canary
+- apiVersion: v1
+  kind: Service
+  metadata:
+    labels:
+      app: ${APP_NAME}
+    name: ${APP_NAME}-canary
+  spec:
+    ports:
+    - name: 8080-tcp
+      port: 8080
+      protocol: TCP
+      targetPort: 8080
+    selector:
+      app: ${APP_NAME}
+      deploymentconfig: ${APP_NAME}-canary
+    sessionAffinity: None
+    type: ClusterIP
+#Route - canary
+- apiVersion: route.openshift.io/v1
+  kind: Route
+  metadata:
+    annotations:
+      openshift.io/host.generated: "true"
+    labels:
+      app: ${APP_NAME}
+    name: ${APP_NAME}-canary
+  spec:
+    host: ${APP_NAME}-canary-evrim-tr.osc-sbx-exp-ap-15768375-f72ef11f3ab089a8c677044eb28292cd-0001.us-east.containers.appdomain.cloud
+    port:
+      targetPort: 8080-tcp
+    tls:
+      termination: edge
+    to:
+      kind: Service
+      name: ${APP_NAME}-canary
       weight: 100
     wildcardPolicy: None
